# i2c_rasp

./: README.md  post_extract.sh
axHostSw/doc/: A71CH_HostLibrary_documentation.html
axHostSw/doc/a71chDoxy/html/: _a71_h_l_s_e_wrapper_8c.html  _a71_h_l_s_e_wrapper_8c.js  _a71_h_l_s_e_wrapper_8c_source.html  _h_l_s_e_a_p_i_8h.html  _h_l_s_e_a_p_i_8h_source.html  _h_l_s_e_comm_8h.html  _h_l_s_e_comm_8h.js  _h_l_s_e_comm_8h_source.html  _h_l_s_e_crypto_8h.html  _h_l_s_e_crypto_8h.js  _h_l_s_e_crypto_8h_source.html  _h_l_s_e_misc_8h.html  _h_l_s_e_misc_8h.js  _h_l_s_e_misc_8h_source.html  _h_l_s_e_objects_8h.html  _h_l_s_e_objects_8h.js  _h_l_s_e_objects_8h_source.html  _h_l_s_e_types_8h.html  _h_l_s_e_types_8h.js  _h_l_s_e_types_8h_source.html  _host_crypto_a_p_i_8h.html  _host_crypto_a_p_i_8h.js  _host_crypto_a_p_i_8h_source.html  _host_crypto_a_p_i_open_s_s_l_8c.html  _host_crypto_a_p_i_open_s_s_l_8c.js  _host_crypto_a_p_i_open_s_s_l_8c_source.html  a71__debug_8c.html  a71__debug_8c.js  a71__debug_8c_source.html  a71__debug_8h.html  a71__debug_8h.js  a71__debug_8h_source.html  a71ch__api_8h.html  a71ch__api_8h.js  a71ch__api_8h_source.html  a71ch__com_8c.html  a71ch__com_8c.js  a71ch__com_8c_source.html  a71ch__configure__tool_8md_source.html  a71ch__const_8h.html  (+514 more)
axHostSw/doc/a71chDoxy/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  (+73 more)
axHostSw/hostLib/: CMakeLists.txt  a71chConfigCmdHistory.txt
axHostSw/hostLib/a71ch/: CMakeLists.txt
axHostSw/hostLib/a71ch/ex/: mainA71CH.c
axHostSw/hostLib/a71ch/light/: .mainA71CHLight.c.swp  mainA71CHLight.c  uECC.h
axHostSw/hostLib/a71ch/src/: .a71ch_com.c.swp  a71ch_com.c
axHostSw/hostLib/build_i2c/: CMakeCache.txt  Makefile  cmake_install.cmake
axHostSw/hostLib/build_i2c/a71ch/: Makefile  cmake_install.cmake
axHostSw/hostLib/build_i2c/api/: Makefile  cmake_install.cmake
axHostSw/hostLib/embSeEngine/a71chDemo/ecc/: tls_client.cer
axHostSw/hostLib/embSeEngine/a71chEx/: Makefile_a71chEcDhKa  Makefile_a71chTlsClient
axHostSw/hostLib/libCommon/smCom/: .sci2c.c.swp  sci2c.c  smComSCI2C.c  smComSerial.c  smComSerial.h
axHostSw/hostLib/platform/generic/: sm_timer.c
axHostSw/hostLib/platform/imx/: i2c_a7.c
axHostSw/hostLib/platform/rsp/: .i2c_a7.c.swp  DODO  asm_arm.inc  asm_avr.inc  asm_avr_mult_square.inc  curve-specific.inc  i2c_a7.c  main.c  pigpio.c  platform-specific.inc  uECC.c  uECC_vli.h
axHostSw/hostLib/tstUtil/: app_boot.c
axHostSw/linux/: A71CH_Engine.tgz  A71CHlight_i2c_native  Makefile_A71CH  buildA71CH.sh
axHostSw/linux/axHostSw/hostLib/embSeEngine/a71chDemo/ecc/: tls_server.cer
se_hostlib_mainA71CH/: CMakeCache.txt  CMakeLists.txt  build_all.bat  build_all.sh  build_release.sh
se_hostlib_mainA71CH/board/: board.c  board.h  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
se_hostlib_mainA71CH/device/: MK82F25615_features.h  system_MK82F25615.c  system_MK82F25615.h
se_hostlib_mainA71CH/doc/: readme.txt
se_hostlib_mainA71CH/drivers/: fsl_clock.c  fsl_clock.h
se_hostlib_mainA71CH/se_hostlib/ax/: A71HLSEWrapper.c  a71ch_api.h  a71ch_com.c  a71ch_const.h  a71ch_module.c  ax_crypto_aes_key.c  ax_crypto_ecc.c  ax_sst.c  ax_switch.c
se_hostlib_mainA71CH/se_hostlib/common/: axHostCryptombedtls.c  sci2c.c  sm_types.h
se_hostlib_mainA71CH/se_hostlib/mbedtls/: a71ch_mbedtls_frdm_config.h  ax_mbedtls.c  ecdh_alt.c  ecdh_alt_ax.c  ecp_alt.c  ecp_alt_ax.c  ecp_curves_alt.c
se_hostlib_mainA71CH/se_hostlib/platform/: app_boot.c  sm_printf.c  sm_printf.h  timer_kinetis.c  timer_kinetis_bm.c  timer_kinetis_freertos.c
se_hostlib_mainA71CH/se_hostlib/src/: HostCryptoAPImbedtls.c
se_hostlib_mainA71CH/se_hostlib/tst/: app_boot.h  hkdf_mbedtls.c  tstHostCrypto_mbedtls.c  tst_sm_time.h  tst_sm_time_kinetis.c  tst_sm_util.c  tst_utils_kinetis.c  tst_utils_kinetis.h
se_hostlib_mainA71CH/source/: ex_misc.c  ex_scp.c
se_hostlib_mainA71CH/src/: MK82FN256xxx15_flash.ld
se_hostlib_mainA71CH/startup/: startup_MK82F25615.S
